# SayIt.nvim

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
lua/sayit/: init.lua
